--- a/style.css
+++ b/style.css
@@ -84,9 +84,6 @@ body {
 .container {
   padding: 0 2.4rem;
 }
-.container-project {
-}
-
 .grid {
   display: grid;
 }
@@ -182,8 +179,6 @@ body {
   height: 16rem;
   background-image: url("./images/image_geometry_2.png");
 }
-.project-section {
-}
 .project-section-title {
   font-family: var(--font-family-secondary);
   font-style: normal;
@@ -198,18 +193,14 @@ body {
 .project-description {
   padding: 2rem;
   background: #1a2236;
-  /* border: 0.333333px solid rgba(255, 255, 255, 0.1); */
   backdrop-filter: blur(0.5px);
 }
 
 .project-name {
   font-family: "Poppins";
-
   font-weight: 400;
   font-size: 2.5rem;
   line-height: 1.5;
-  /* identical to box height, or 16px */
-
   color: #ffffff;
 }
 .project-features {
@@ -223,11 +214,8 @@ body {
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 80%;
-  /* or 8px */
-
   color: #1a2236;
   background: #98dede;
-
   padding: 0.6rem 1rem;
 }
 .project-img img {
@@ -236,16 +224,13 @@ body {
 .view-project {
   display: inline-flex;
   align-items: center;
-
   gap: 1.2rem;
-
   text-align: center;
   border: 1px solid #fff;
   padding: 1.2rem;
 }
 .view-project a {
   color: #fff;
-
   font-family: var(--font-family-primary);
   font-style: normal;
   font-weight: 500;
@@ -270,7 +255,6 @@ body {
   font-weight: 400;
   font-size: 50px;
   line-height: 100%;
-  /* identical to box height, or 50px */
   color: #1a2236;
 }
 
@@ -293,14 +277,19 @@ body {
   padding: 1.3rem;
   justify-content: center;
   align-items: center;
-  gap: 2.5rem;
+  gap: 2rem;
   text-align: center;
-
   color: #ffffff;
   background-color: #000;
 }
 .about-section-cv a {
-  color: #fff;
+  font-family: var(--font-family-primary);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.6;
+  line-height: 1.5;
+  text-align: center;
+  color: #ffffff;
   text-decoration: none;
 }
 .cv-icon {
@@ -375,7 +364,6 @@ body {
   line-height: 100%;
   color: #1a2236;
 }
-
 .get-started-text {
   font-family: "Poppins";
   font-style: normal;
@@ -386,9 +374,6 @@ body {
 
   color: #1a2236;
 }
-.get-started-form {
-}
-
 .form-control {
   display: grid;
   flex-direction: column;
@@ -437,7 +422,6 @@ body {
   border: 1px solid #dfdfe0;
 }
 
-/* color: #aaa; */
 .form-control-area textarea::placeholder {
   color: #aaa;
 }
@@ -453,43 +437,40 @@ body {
 .icon {
 }
 .footer-section {
-    padding: 3.2rem 1.6rem;
+  padding: 3.2rem 1.6rem;
   background: #1a2236;
-
-  /* remove after */
-  margin-bottom: 50rem;
 }
 .footer-container {
-    
 }
-.footer-container aside{
-    display: flex;
-    align-items: center;
-    gap: 1.6rem;
+.footer-container aside {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
 }
 .resume-link {
   font-family: var(primary);
   font-style: normal;
   font-weight: 500;
   font-size: 1.6rem;
-  line-height:2.4rem;
+  line-height: 2.4rem;
   color: #92dcdc;
 }
-.resume-link-icon{
-    color: #92dcdc;
+.resume-link-icon {
+  color: #92dcdc;
 }
-.list-footer-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.list-footer-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.list-footer{
-    list-style: none;
+.list-footer {
+  list-style: none;
+  cursor: pointer;
 }
-.footer-icon{
-    width: 2.4rem;
-    height: 2.4rem;
-    color: #fff;
+.footer-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+  color: #fff;
 }
 
 /* footer section */
