--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/*start:  resets */
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +5,6 @@
 }
 
 html {
-  /* font-size: 10px; */
   font-size: 62.5%;
 }
 
@@ -17,19 +15,12 @@ body {
   color: #555;
 }
 
-/*  end: resets */
-
-/* start: variables */
 :root {
   --color-tint: #fdf2e9;
   --primary-white: #fff;
   --font-family-secondary: "Playfair Display";
   --font-family-primary: "Poppins";
 }
-
-/*  end: variables */
-
-/* reuseable Component */
 
 /* PADDING AND MARGIN SECTION */
 .margin-lg {
@@ -39,42 +30,55 @@ body {
 .margin-sm {
   margin-top: 2rem;
 }
+
 .margin-sm-t {
   margin-top: 2.1rem;
 }
+
 .margin-xsm {
   margin-top: 1.6rem;
 }
+
 .margin-md {
   margin-top: 3rem;
 }
+
 .margin-md-sm {
   margin-top: 3.2rem;
 }
+
 .margin-md-sm-b {
   margin-bottom: 3.2rem;
 }
+
 .margin-xmd {
   margin-top: 4rem;
 }
+
 .margin-xmd-b {
   margin-bottom: 4rem;
 }
+
 .margin-xmd-t {
   margin-top: 4rem;
 }
+
 .margin-sm-b {
   margin-bottom: 2rem;
 }
+
 .padding-sm {
   padding-left: 1.6rem;
 }
+
 .padding-md {
   padding: 2rem;
 }
+
 .margin-xl-t {
   margin-top: 6.4rem;
 }
+
 .margin-xsm-t {
   margin-top: 0.8rem;
 }
@@ -84,6 +88,7 @@ body {
 .container {
   padding: 0 2.4rem;
 }
+
 .grid {
   display: grid;
 }
@@ -91,15 +96,19 @@ body {
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
 }
+
 .grid--3-cols {
   grid-template-columns: repeat(3, 1fr);
 }
+
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
 }
+
 .grid--5-cols {
   grid-template-columns: repeat(5, 1fr);
 }
+
 .grid-center-vertically {
   align-items: center;
 }
@@ -110,6 +119,7 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
 .nav-hamburger {
   justify-self: flex-end;
   margin-right: 2.5rem;
@@ -119,11 +129,13 @@ body {
   outline: none;
   border: none;
 }
+
 .btn-header {
   width: 100%;
   background: #1a2236;
   transition: all 0.4s;
 }
+
 .btn-header:hover,
 .btn-header:visited {
   font-family: var(--font-family-primary);
@@ -148,6 +160,7 @@ body {
   line-height: 100%;
   color: #1a2236;
 }
+
 .header-description-text {
   font-family: var(--font-family-primary);
   font-style: normal;
@@ -156,6 +169,17 @@ body {
   line-height: 2rem;
   letter-spacing: -0.01em;
   color: #1a2236;
+}
+
+.about-section-cv a {
+  font-family: var(--font-family-primary);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.6;
+  line-height: 1.5;
+  text-align: center;
+  color: #fff;
+  text-decoration: none;
 }
 
 .btn-header a {
@@ -168,10 +192,7 @@ body {
   line-height: 24px;
   text-align: center;
   padding: 1rem 0;
-  color: #ffffff;
-}
-.btn-header a:hover {
-  color: #1a2236;
+  color: #fff;
 }
 
 .box-image {
@@ -179,6 +200,7 @@ body {
   height: 16rem;
   background-image: url("./images/image_geometry_2.png");
 }
+
 .project-section-title {
   font-family: var(--font-family-secondary);
   font-style: normal;
@@ -187,9 +209,11 @@ body {
   line-height: 100%;
   color: #1a2236;
 }
+
 .project-description-container {
   flex-direction: column;
 }
+
 .project-description {
   padding: 2rem;
   background: #1a2236;
@@ -197,19 +221,21 @@ body {
 }
 
 .project-name {
-  font-family: "Poppins";
+  font-family: var(--font-family-primary);
   font-weight: 400;
   font-size: 2.5rem;
   line-height: 1.5;
-  color: #ffffff;
+  color: #fff;
 }
+
 .project-features {
   display: flex;
   align-items: center;
   gap: 2rem;
 }
+
 .btn-feature {
-  font-family: "Poppins";
+  font-family: var(--font-family-primary);
   font-style: normal;
   font-weight: 400;
   font-size: 1.2rem;
@@ -218,9 +244,11 @@ body {
   background: #98dede;
   padding: 0.6rem 1rem;
 }
+
 .project-img img {
   width: 100%;
 }
+
 .view-project {
   display: inline-flex;
   align-items: center;
@@ -229,6 +257,7 @@ body {
   border: 1px solid #fff;
   padding: 1.2rem;
 }
+
 .view-project a {
   color: #fff;
   font-family: var(--font-family-primary);
@@ -238,6 +267,11 @@ body {
   line-height: 3rem;
   text-decoration: none;
 }
+
+.btn-header a:hover {
+  color: #1a2236;
+}
+
 .icon {
   color: #fff;
   width: 3rem;
@@ -249,6 +283,7 @@ body {
 .about-section {
   padding: 1.6rem;
 }
+
 .about-section-title {
   font-family: var(--font-family-secondary);
   font-style: normal;
@@ -264,9 +299,9 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.5;
-
   color: #1a2236;
 }
+
 .about-section-cv {
   display: flex;
   font-family: var(--font-family-primary);
@@ -279,19 +314,10 @@ body {
   align-items: center;
   gap: 2rem;
   text-align: center;
-  color: #ffffff;
+  color: #fff;
   background-color: #000;
 }
-.about-section-cv a {
-  font-family: var(--font-family-primary);
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1.6;
-  line-height: 1.5;
-  text-align: center;
-  color: #ffffff;
-  text-decoration: none;
-}
+
 .cv-icon {
   width: 3.2rem;
   height: 3.2rem;
@@ -300,12 +326,15 @@ body {
 .framwork-card {
   padding: 5rem;
 }
+
 .card-one {
   background: #1c528a;
 }
+
 .card-two {
   background: #e2505c;
 }
+
 .card-three {
   background: #febf52;
 }
@@ -317,13 +346,13 @@ body {
   font-size: 2rem;
   line-height: 1.5;
   letter-spacing: 1.2;
-
-  color: #ffffff;
+  color: #fff;
 }
 
 .list-items {
   color: #fff;
 }
+
 .list-items li {
   font-family: var(--font-family-primary);
   font-style: normal;
@@ -334,11 +363,13 @@ body {
   list-style-position: inside;
   padding: 0;
 }
+
 .list-item {
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
+
 .last {
   margin-bottom: 2.5rem;
 }
@@ -353,6 +384,7 @@ body {
 .main {
   position: relative;
 }
+
 .framework-footer-img {
   position: absolute;
   bottom: 0;
@@ -360,44 +392,46 @@ body {
 }
 
 /* ****************get started section *****************/
-/* ****************get started section *****************/
 .get-started-section {
   background-color: #f9f9fa;
   padding: 1.8rem;
 }
+
 .get-started-info {
   padding: 1.8rem;
 }
+
 .get-started-info p {
-  font-family: "Playfair Display";
+  font-family: var(--font-family-secondary);
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
   line-height: 100%;
   color: #1a2236;
 }
+
 .get-started-text {
-  font-family: "Poppins";
+  font-family: var(--font-family-primary);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: -0.01em;
-
   color: #1a2236;
 }
+
 .form-control {
   display: grid;
   flex-direction: column;
   gap: 0.4rem;
-  border: 1px solid green;
   padding: 0 1.6rem;
   border-radius: 0.4rem;
-  background: #ffffff;
-  border: 1px solid #1a2236;
+  background: #fff;
+  border: 1px solid #dfdfe0;
 }
+
 .form-control label {
-  font-family: "Poppins";
+  font-family: var(--font-family-primary);
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
@@ -405,6 +439,7 @@ body {
   padding-top: 0.4rem;
   color: #7d7c84;
 }
+
 .form-control input {
   font-family: var(--font-family-primary);
   font-style: normal;
@@ -414,10 +449,9 @@ body {
   margin-bottom: 0.8rem;
   border: none;
   outline: none;
-  font-size: 1.4rem;
-
   color: #1a2236;
 }
+
 .form-control-area textarea {
   width: 100%;
   height: 12rem;
@@ -429,7 +463,6 @@ body {
   font-size: 1.5rem;
   line-height: 2;
   color: #7d7c84;
-  border: none;
   outline: none;
   border: 1px solid #dfdfe0;
 }
@@ -437,28 +470,25 @@ body {
 .form-control-area textarea::placeholder {
   color: #aaa;
 }
+
 .form-control-area textarea:focus {
-  background: #ffffff;
+  background: #fff;
   border: 1px solid #dfdfe0;
   border-radius: 4px;
 }
 
 /***************** get started section *****************/
-/* ****************get started section *****************/
-
-.icon {
-}
 .footer-section {
   padding: 3.2rem 1.6rem;
   background: #1a2236;
 }
-.footer-container {
-}
+
 .footer-container aside {
   display: flex;
   align-items: center;
   gap: 1.6rem;
 }
+
 .resume-link {
   font-family: var(primary);
   font-style: normal;
@@ -467,23 +497,26 @@ body {
   line-height: 2.4rem;
   color: #92dcdc;
 }
+
 .resume-link-icon {
   color: #92dcdc;
 }
+
 .list-footer-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .list-footer {
   list-style: none;
   cursor: pointer;
 }
+
 .footer-icon {
   width: 2.4rem;
   height: 2.4rem;
   color: #fff;
 }
 
-/* footer section */
 /* footer section */
