--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ body {
   color: #1a2236;
 }
 
-.form-control {
+.form-control-input {
   display: grid;
   flex-direction: column;
   gap: 0.4rem;
@@ -452,7 +452,7 @@ body {
   border: 1px solid #dfdfe0;
 }
 
-.form-control label {
+.form-control-input label {
   font-family: var(--font-family-primary);
   font-style: normal;
   font-weight: 400;
@@ -462,7 +462,7 @@ body {
   color: #7d7c84;
 }
 
-.form-control input {
+.form-control-input input {
   font-family: var(--font-family-primary);
   font-style: normal;
   font-weight: 400;
@@ -474,7 +474,7 @@ body {
   color: #1a2236;
 }
 
-.form-control-area textarea {
+.form-control-textarea textarea {
   width: 100%;
   height: 12rem;
   resize: none;
@@ -489,11 +489,11 @@ body {
   border: 1px solid #dfdfe0;
 }
 
-.form-control-area textarea::placeholder {
+.form-control-textarea textarea::placeholder {
   color: #aaa;
 }
 
-.form-control-area textarea:focus {
+.form-control-textarea textarea:focus {
   background: #fff;
   border: 1px solid #dfdfe0;
   border-radius: 4px;
