--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ body {
 /* ******************* about section ******************** */
 
 .about-section {
-  padding: 1.6rem;
+  padding: 4rem
 }
 
 .about-section-title {
@@ -543,15 +543,15 @@ body {
 .footer-container aside {
   display: flex;
   align-items: center;
-  gap: 1.6rem;
+  gap: 1.5rem;
 }
 
 .resume-link {
   font-family: var(primary);
   font-style: normal;
   font-weight: 500;
-  font-size: 1.6rem;
-  line-height: 2.4rem;
+  font-size: 2.4rem;
+  /* line-height: 2.4rem; */
   color: #92dcdc;
 }
 
@@ -560,6 +560,7 @@ body {
 }
 
 .list-footer-container {
+  margin-top: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -879,7 +880,19 @@ letter-spacing: -0.01em;
   text-align: center;
 }
 .get-started-btn .form-btn{
-    padding: 1.2rem 4.2rem;
+    padding: 1.2rem 1.2rem;
 
 }
+.footer-container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.list-footer-container{
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+   margin-top: 0;
+}
+
 }
